updating from local repo

--- a/Athletes.html
+++ b/Athletes.html
@@ -6,8 +6,22 @@
 	<title>Bluesteel Brewery | Home</title>
 	<link href="css/reset.css" rel="stylesheet" type="text/css">
 	<link href="css/main.css" rel="stylesheet" type="text/css">
+	<script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 <body>
-
+<nav>
+		<label class="logo">Bluesteel</label>
+		<input type="checkbox" id="check">
+		<label for="check" class="checkbtn">
+			<i class="fas fa-bars"></i>
+		</label>
+		<ul class="mainNav">
+			<li><a href="index.html">Home</a></li>
+			<li><a href="ourStory.html">Our Story</a></li>
+			<li><a href="theBrew.html">The Brew</a></li>
+			<li><a class="active" href="Athletes.html">Athletes</a></li>
+			<li><a href="Contact.html">Contact</a></li>
+		</ul>
+	</nav>
 </body>
 </html>
