--- a/index.html
+++ b/index.html
@@ -6,8 +6,63 @@
 	<title>Bluesteel Brewery | Home</title>
 	<link href="css/reset.css" rel="stylesheet" type="text/css">
 	<link href="css/main.css" rel="stylesheet" type="text/css">
+	<script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 <body>
+<nav>
+		<label class="logo">Bluesteel</label>
+		<input type="checkbox" id="check">
+		<label for="check" class="checkbtn">
+			<i class="fas fa-bars"></i>
+		</label>
+		<ul class="mainNav">
+			<li><a class="active" href="index.html">Home</a></li>
+			<li><a href="ourStory.html">Our Story</a></li>
+			<li><a href="theBrew.html">The Brew</a></li>
+			<li><a href="Athletes.html">Athletes</a></li>
+			<li><a href="Contact.html">Contact</a></li>
+		</ul>
+	</nav>
+<br>
 
+	<!-- Slideshow container -->
+<div class="slideshow-container">
+
+  <!-- Full-width images with number and caption text -->
+  <div class="mySlides fade">
+    <div class="numbertext">1 / 3</div>
+    <img src="images/together.jpg" style="width:100%">
+    <div class="text">Be Together.</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">2 / 3</div>
+    <img src="images/trackandfield.jpg" style="width:100%">
+    <div class="text">Be Active.</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">3 / 3</div>
+    <img src="images/share.jpg" style="width:100%">
+    <div class="text">Be Comfortable.</div>
+  </div>
+
+  <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+<br>
+
+<!-- The dots/circles -->
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span> 
+  <span class="dot" onclick="currentSlide(2)"></span> 
+  <span class="dot" onclick="currentSlide(3)"></span> 
+</div>
+
+
+
+
+<script src="js/main.js"></script>
 </body>
 </html>
