updating files again

--- a/Athletes.html
+++ b/Athletes.html
@@ -23,5 +23,10 @@
 			<li><a href="Contact.html">Contact</a></li>
 		</ul>
 	</nav>
+	<img src="images/dancedance.jpg">
+	<img src="images/swimming.jpg">
+	<img src="images/team.jpg">
+	<img src="images/team.jpg">
+
 </body>
 </html>
