--- a/index.html
+++ b/index.html
@@ -61,7 +61,43 @@
 </div>
 
 
+<section class="home-page-images">
+  <div class="images">
+     <img src="images/darken.jpg">
+     <h4>The Beer</h4>
+     <p>Bluesteel 1445. A taste of history.</p>
+  </div>
 
+   <div class="images">
+     <img src="images/secret.jpg">
+     <h4>The Beer</h4>
+     <p>Bluesteel 1445. A taste of history.</p>
+  </div>
+
+   <div class="images">
+     <img src="images/pierrecelis.jpeg">
+     <h4>The Beer</h4>
+     <p>Bluesteel 1445. A taste of history.</p>
+  </div>
+</section>
+
+<section class="home-page-lower">
+   <div class="images">
+     <img src="images/beerTable.jpg">
+     <h4>The Beer</h4>
+     <p>Bluesteel 1445. A taste of history.</p>
+  </div>
+   <div class="images">
+     <img src="images/athlete.jpg">
+     <h4>The Beer</h4>
+     <p>Bluesteel 1445. A taste of history.</p>
+  </div>
+   <div class="images">
+     <img src="images/sitting.jpg">
+     <h4>The Beer</h4>
+     <p>Bluesteel 1445. A taste of history.</p>
+  </div>
+</section>
 
 <script src="js/main.js"></script>
 </body>
