--- a/ourStory.html
+++ b/ourStory.html
@@ -23,5 +23,20 @@
 			<li><a href="Contact.html">Contact</a></li>
 		</ul>
 	</nav>
+
+	<section class="our-story-images">
+		<div class="images">
+			<img src="images/wheats.jpg">
+			<p> A village called Steel, near Tienen in Flanders, is the modern birthplace of Belgian white beer. Records of brewing in the village date back to 1445, when the local monks were enthusiastic brewers, but the tradition died out in the 1950s.</p>
+		</div>
+		<div class="images">
+			<img src="images/village.jpg">
+			<p> A village called Steel, near Tienen in Flanders, is the modern birthplace of Belgian white beer. Records of brewing in the village date back to 1445, when the local monks were enthusiastic brewers, but the tradition died out in the 1950s.</p>
+		</div>
+			<div class="images">
+			<img src="images/pierrecelis2.jpg">
+			<p> A village called Steel, near Tienen in Flanders, is the modern birthplace of Belgian white beer. Records of brewing in the village date back to 1445, when the local monks were enthusiastic brewers, but the tradition died out in the 1950s.</p>
+		</div>
+	</section>
 </body>
 </html>
