--- a/theBrew.html
+++ b/theBrew.html
@@ -23,5 +23,15 @@
 			<li><a href="Contact.html">Contact</a></li>
 		</ul>
 	</nav>
+	<img src="images/running.jpg">
+	<p>Anti-Chafing products help prevent chafing on your rear and any other body parts that rub together or against clothing, so it is often used by runners and other athletes. </p>
+
+	<img src="images/thinking.jpg">
+	<p>Anti-Chafe Beer allows the body to experience the same sensation it would if you applied anti-chafe cream before any physical activity. Because the same result is achieved by drinking the beer, it’s the first of its kind. </p>
+
+	<img src="images/corander.jpg">
+	<img src="images/wheat-small.jpg">
+	<img src="images/yeast.jpg">
+	<p>First brewed in 1445, Bluesteel’s anti-chafe beer is made with wheat, coriander and yeast with a hint of tea tree oil for it’s anti-chafe qualities.</p>
 </body>
 </html>
