--- a/Athletes.html
+++ b/Athletes.html
@@ -23,7 +23,10 @@
 			<li><a href="Contact.html">Contact</a></li>
 		</ul>
 	</nav>
-	<img src="images/dancedance.jpg">
+<video width="320" height="240" controls>
+  <source src="bluesteel-ad.mp4" type="video/mp4">
+Your browser does not support the video tag.
+</video>	<img src="images/dancedance.jpg">
 	<img src="images/swimming.jpg">
 	<img src="images/team.jpg">
 	<img src="images/team.jpg">
