--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 	</nav>
 <br>
 
+<main>
 	<!-- Slideshow container -->
 <div class="slideshow-container">
 
@@ -64,41 +65,53 @@
 <section class="home-page-images">
   <div class="images">
      <img src="images/darken.jpg">
+    <div class="caption">
      <h4>The Beer</h4>
      <p>Bluesteel 1445. A taste of history.</p>
+   </div>
   </div>
 
    <div class="images">
      <img src="images/secret.jpg">
+      <div class="caption">
      <h4>The Beer</h4>
      <p>Bluesteel 1445. A taste of history.</p>
   </div>
+</div>
 
    <div class="images">
      <img src="images/pierrecelis.jpeg">
+      <div class="caption">
      <h4>The Beer</h4>
      <p>Bluesteel 1445. A taste of history.</p>
   </div>
+</div>
 </section>
 
 <section class="home-page-lower">
    <div class="images">
      <img src="images/beerTable.jpg">
+    <div class="caption">
      <h4>The Beer</h4>
      <p>Bluesteel 1445. A taste of history.</p>
   </div>
+</div>
    <div class="images">
      <img src="images/athlete.jpg">
+     <div class="caption">
      <h4>The Beer</h4>
      <p>Bluesteel 1445. A taste of history.</p>
   </div>
+</div>
    <div class="images">
      <img src="images/sitting.jpg">
+      <div class="caption">
      <h4>The Beer</h4>
      <p>Bluesteel 1445. A taste of history.</p>
   </div>
+</div>
 </section>
-
+</main>
 <script src="js/main.js"></script>
 </body>
 </html>
