--- a/ourStory.html
+++ b/ourStory.html
@@ -31,11 +31,16 @@
 		</div>
 		<div class="images">
 			<img src="images/village.jpg">
-			<p> A village called Steel, near Tienen in Flanders, is the modern birthplace of Belgian white beer. Records of brewing in the village date back to 1445, when the local monks were enthusiastic brewers, but the tradition died out in the 1950s.</p>
+			<p> The village of Steel had been known for its witbieren (anti-chafe white beers) since the Middle Ages. In the nineteenth century, the village had thirteen breweries and 9 distilleries however, in 1957, the last local witbier brewery, Tomsin, closed its doors.</p>
 		</div>
 			<div class="images">
 			<img src="images/pierrecelis2.jpg">
-			<p> A village called Steel, near Tienen in Flanders, is the modern birthplace of Belgian white beer. Records of brewing in the village date back to 1445, when the local monks were enthusiastic brewers, but the tradition died out in the 1950s.</p>
+			<p> Pierre Celis, a milkman who had grown up next to the brewery and sometimes helped with brewing, decided some ten years later to try to revive the style. 
+
+He started a new brewery, called de Kluis, in his hay loft. Celis used the traditional ingredients of water, yeast, wheat, hops, coriander, and dried Curaçao orange peel known as Laraha.
+
+
+ In the 1980s, with demand for the product continuing to grow, Celis bought Hougardia, a former lemonade factory, to expand his anti-chafe brewing operations.</p>
 		</div>
 	</section>
 </body>
