--- a/ourStory.html
+++ b/ourStory.html
@@ -1,47 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Bluesteel Brewery | Home</title>
-	<link href="css/reset.css" rel="stylesheet" type="text/css">
-	<link href="css/main.css" rel="stylesheet" type="text/css">
-	<script src="https://kit.fontawesome.com/a076d05399.js"></script>
-</head>
-<body>
-<nav>
-		<label class="logo">Bluesteel</label>
-		<input type="checkbox" id="check">
-		<label for="check" class="checkbtn">
-			<i class="fas fa-bars"></i>
-		</label>
-		<ul class="mainNav">
-			<li><a href="index.html">Home</a></li>
-			<li><a class="active"  href="ourStory.html">Our Story</a></li>
-			<li><a href="theBrew.html">The Brew</a></li>
-			<li><a href="Athletes.html">Athletes</a></li>
-			<li><a href="Contact.html">Contact</a></li>
-		</ul>
-	</nav>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bluesteel Brewery | Home</title>
+    <link href="css/reset.css" rel="stylesheet" type="text/css">
+    <link href="css/main.css" rel="stylesheet" type="text/css">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+  </head>
+  <body class="our-story">
+    <nav>
+      <label class="logo">Bluesteel</label>
+      <input type="checkbox" id="check">
+      <label for="check" class="checkbtn">
+        <i class="fas fa-bars"></i>
+      </label>
+      <ul class="mainNav">
+        <li><a href="index.html">Home</a></li>
+        <li><a class="active"  href="ourStory.html">Our Story</a></li>
+        <li><a href="theBrew.html">The Brew</a></li>
+        <li><a href="Athletes.html">Athletes</a></li>
+        <li><a href="Contact.html">Contact</a></li>
+      </ul>
+    </nav>
 
-	<section class="our-story-images">
-		<div class="images">
-			<img src="images/wheats.jpg">
-			<p> A village called Steel, near Tienen in Flanders, is the modern birthplace of Belgian white beer. Records of brewing in the village date back to 1445, when the local monks were enthusiastic brewers, but the tradition died out in the 1950s.</p>
-		</div>
-		<div class="images">
-			<img src="images/village.jpg">
-			<p> The village of Steel had been known for its witbieren (anti-chafe white beers) since the Middle Ages. In the nineteenth century, the village had thirteen breweries and 9 distilleries however, in 1957, the last local witbier brewery, Tomsin, closed its doors.</p>
-		</div>
-			<div class="images">
-			<img src="images/pierrecelis2.jpg">
-			<p> Pierre Celis, a milkman who had grown up next to the brewery and sometimes helped with brewing, decided some ten years later to try to revive the style. 
+    <section class="our-story-images">
+      <div class="images">
+        <img src="images/wheats.jpg">
+        <p> A village called Steel, near Tienen in Flanders, is the modern birthplace of Belgian white beer. Records of brewing in the village date back to 1445, when the local monks were enthusiastic brewers, but the tradition died out in the 1950s.</p>
+      </div>
+      <div class="clear" />
+      <div class="images image-2">
+        <img src="images/village.jpg">
+        <p> The village of Steel had been known for its witbieren (anti-chafe white beers) since the Middle Ages. In the nineteenth century, the village had thirteen breweries and 9 distilleries however, in 1957, the last local witbier brewery, Tomsin, closed its doors.</p>
+      </div>
+      <div class="clear" />
+    </section>
+    <hr />
+  <section class="our-story-lower">
+    <div class="images">
+      <img src="images/pierrecelis2.jpg">
+      <p> Pierre Celis, a milkman who had grown up next to the brewery and sometimes helped with brewing, decided some ten years later to try to revive the style. 
 
-He started a new brewery, called de Kluis, in his hay loft. Celis used the traditional ingredients of water, yeast, wheat, hops, coriander, and dried Curaçao orange peel known as Laraha.
+        He started a new brewery, called de Kluis, in his hay loft. Celis used
+        the traditional ingredients of water, yeast, wheat, hops, coriander,
+        and dried Curaçao orange peel known as Laraha.
 
 
- In the 1980s, with demand for the product continuing to grow, Celis bought Hougardia, a former lemonade factory, to expand his anti-chafe brewing operations.</p>
-		</div>
-	</section>
-</body>
+        In the 1980s, with demand for the product continuing to grow, Celis bought Hougardia, a former lemonade factory, to expand his anti-chafe brewing operations.</p>
+    </div>
+  </section>
+  </body>
 </html>
