--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	</nav>
 <br>
 
-<main>
+<main class="home">
 	<!-- Slideshow container -->
 <div class="slideshow-container">
 
@@ -61,57 +61,78 @@
   <span class="dot" onclick="currentSlide(3)"></span> 
 </div>
 
-
-<section class="home-page-images">
-  <div class="images">
-     <img src="images/darken.jpg">
-    <div class="caption">
-     <h4>The Beer</h4>
-     <p>Bluesteel 1445. A taste of history.</p>
-   </div>
-  </div>
-
-   <div class="images">
-     <img src="images/secret.jpg">
+<section class="main">
+  <section class="home-page-images">
+    <div class="images">
+      <img src="images/darken.jpg">
       <div class="caption">
-     <h4>The Beer</h4>
-     <p>Bluesteel 1445. A taste of history.</p>
-  </div>
-</div>
+        <h4>The Beer</h4>
+        <p>Bluesteel 1445. A taste of history.</p>
+      </div>
+    </div>
 
-   <div class="images">
-     <img src="images/pierrecelis.jpeg">
+    <div class="images">
+      <img src="images/secret.jpg">
       <div class="caption">
-     <h4>The Beer</h4>
-     <p>Bluesteel 1445. A taste of history.</p>
-  </div>
-</div>
-</section>
+        <h4>The Beer</h4>
+        <p>Bluesteel 1445. A taste of history.</p>
+      </div>
+    </div>
 
-<section class="home-page-lower">
-   <div class="images">
-     <img src="images/beerTable.jpg">
-    <div class="caption">
-     <h4>The Beer</h4>
-     <p>Bluesteel 1445. A taste of history.</p>
-  </div>
-</div>
-   <div class="images">
-     <img src="images/athlete.jpg">
-     <div class="caption">
-     <h4>The Beer</h4>
-     <p>Bluesteel 1445. A taste of history.</p>
-  </div>
-</div>
-   <div class="images">
-     <img src="images/sitting.jpg">
+    <div class="images">
+      <img src="images/pierrecelis.jpeg">
       <div class="caption">
-     <h4>The Beer</h4>
-     <p>Bluesteel 1445. A taste of history.</p>
-  </div>
-</div>
+        <h4>The Beer</h4>
+        <p>Bluesteel 1445. A taste of history.</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="home-page-mid">
+    <div class="images">
+      <img src="images/beerTable.jpg">
+      <div class="caption">
+        <h4>The Beer</h4>
+        <p>Bluesteel 1445. A taste of history.</p>
+      </div>
+    </div>
+  </section>
+  <section class="home-page-lower">
+    <div class="images">
+      <img src="images/athlete.jpg">
+      <div class="caption">
+        <h4>The Beer</h4>
+        <p>Bluesteel 1445. A taste of history.</p>
+      </div>
+    </div>
+    <div class="images">
+      <img src="images/sitting.jpg">
+      <div class="caption">
+        <h4>The Beer</h4>
+        <p>Bluesteel 1445. A taste of history.</p>
+      </div>
+    </div>
+  </section>
 </section>
 </main>
+<video width="320" height="240" controls>
+  <source src="promoIvid.mp4" type="video/mp4">
+Your browser does not support the video tag.
+</video>
+
+<section class="footer-nav">
+ <ul class="FooterNav">
+      <li><a class="active" href="index.html">Home</a></li>
+      <li><a href="ourStory.html">Our Story</a></li>
+      <li><a href="theBrew.html">The Brew</a></li>
+      <li><a href="Athletes.html">Athletes</a></li>
+      <li><a href="Contact.html">Contact</a></li>
+    </ul> 
+ <i class="fab fa-instagram"></i>
+ <i class="fab fa-facebook-f"></i>
+ <i class="fab fa-twitter"></i> 
+ <i class="fab fa-pinterest"></i>
+</section>
 <script src="js/main.js"></script>
 </body>
 </html>
