--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="images">
       <img src="images/darken.jpg">
       <div class="caption">
-        <h4>The Beer</h4>
+        <a href="ourStory.html"><h4>The Beer.</h4></a>
         <p>Bluesteel 1445. A taste of history.</p>
       </div>
     </div>
@@ -74,16 +74,16 @@
     <div class="images">
       <img src="images/secret.jpg">
       <div class="caption">
-        <h4>The Beer</h4>
-        <p>Bluesteel 1445. A taste of history.</p>
+         <h4>Purified Wheat.</h4>
+        <p>Some Secrets are worth sharing.</p>
       </div>
     </div>
 
     <div class="images">
       <img src="images/pierrecelis.jpeg">
       <div class="caption">
-        <h4>The Beer</h4>
-        <p>Bluesteel 1445. A taste of history.</p>
+        <h4>Pierre Celis.</h4>
+        <p>Belgian Brewer</p>
       </div>
     </div>
   </section>
@@ -101,7 +101,7 @@
     <div class="images">
       <img src="images/athlete.jpg">
       <div class="caption">
-        <h4>The Beer</h4>
+        <h4>The Athletes</h4>
         <p>Bluesteel 1445. A taste of history.</p>
       </div>
     </div>
@@ -114,24 +114,26 @@
     </div>
   </section>
 </section>
-</main>
-<video width="320" height="240" controls>
-  <source src="promoIvid.mp4" type="video/mp4">
+<video controls>
+  <source src="assets/promoIvid.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video>
+</main>
 
 <section class="footer-nav">
- <ul class="FooterNav">
-      <li><a class="active" href="index.html">Home</a></li>
-      <li><a href="ourStory.html">Our Story</a></li>
-      <li><a href="theBrew.html">The Brew</a></li>
-      <li><a href="Athletes.html">Athletes</a></li>
-      <li><a href="Contact.html">Contact</a></li>
-    </ul> 
- <i class="fab fa-instagram"></i>
- <i class="fab fa-facebook-f"></i>
- <i class="fab fa-twitter"></i> 
- <i class="fab fa-pinterest"></i>
+ <ul class="footer-nav">
+   <li><a class="active" href="index.html">Home</a></li>
+   <li><a href="ourStory.html">Our Story</a></li>
+   <li><a href="theBrew.html">The Brew</a></li>
+   <li><a href="Athletes.html">Athletes</a></li>
+   <li><a href="Contact.html">Contact</a></li>
+ </ul>
+ <div class="social">
+   <i class="fab fa-instagram"></i>
+   <i class="fab fa-facebook-f"></i>
+   <i class="fab fa-twitter"></i>
+   <i class="fab fa-pinterest"></i>
+ </div>
 </section>
 <script src="js/main.js"></script>
 </body>
