--- a/Athletes.html
+++ b/Athletes.html
@@ -1,35 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Bluesteel Brewery | Home</title>
-	<link href="css/reset.css" rel="stylesheet" type="text/css">
-	<link href="css/main.css" rel="stylesheet" type="text/css">
-	<script src="https://kit.fontawesome.com/a076d05399.js"></script>
-</head>
-<body>
-<nav>
-		<label class="logo">Bluesteel</label>
-		<input type="checkbox" id="check">
-		<label for="check" class="checkbtn">
-			<i class="fas fa-bars"></i>
-		</label>
-		<ul class="mainNav">
-			<li><a href="index.html">Home</a></li>
-			<li><a href="ourStory.html">Our Story</a></li>
-			<li><a href="theBrew.html">The Brew</a></li>
-			<li><a class="active" href="Athletes.html">Athletes</a></li>
-			<li><a href="Contact.html">Contact</a></li>
-		</ul>
-	</nav>
-<video width="320" height="240" controls>
-  <source src="bluesteel-ad.mp4" type="video/mp4">
-Your browser does not support the video tag.
-</video>	<img src="images/dancedance.jpg">
-	<img src="images/swimming.jpg">
-	<img src="images/team.jpg">
-	<img src="images/team.jpg">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bluesteel Brewery | Home</title>
+    <link href="css/reset.css" rel="stylesheet" type="text/css">
+    <link href="css/main.css" rel="stylesheet" type="text/css">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+  </head>
+  <body class="our-story">
+    <nav>
+      <label class="logo">Bluesteel</label>
+      <input type="checkbox" id="check">
+      <label for="check" class="checkbtn">
+        <i class="fas fa-bars"></i>
+      </label>
+      <ul class="mainNav">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="ourStory.html">Our Story</a></li>
+        <li><a href="theBrew.html">The Brew</a></li>
+        <li><a class="active"  href="Athletes.html">Athletes</a></li>
+        <li><a href="Contact.html">Contact</a></li>
+      </ul>
+    </nav>
 
-</body>
+    <video controls>
+  <source src="assets/bluesteel-ad.mp4" type="video/mp4">
+Your browser does not support the video tag.
+</video>
+
+    
+
+    <section class="our-story-images">
+      <div class="images">
+        <img src="images/promo-image1.png">
+        <img src="images/promo-image2.png">
+      </div>
+    </section>
+    <hr />
+
+
+  <a href="submit.html"><button type="submit" form="nameform" value="Submit">BUY NOW</button></a>
+
+<section class="footer-nav">
+ <ul class="footer-nav">
+   <li><a href="index.html">Home</a></li>
+   <li><a href="ourStory.html">Our Story</a></li>
+   <li><a href="theBrew.html">The Brew</a></li>
+   <li><a class="active"  href="Athletes.html">Athletes</a></li>
+   <li><a href="Contact.html">Contact</a></li>
+ </ul>
+ <div class="social">
+   <i class="fab fa-instagram"></i>
+   <i class="fab fa-facebook-f"></i>
+   <i class="fab fa-twitter"></i>
+   <i class="fab fa-pinterest"></i>
+ </div>
+</section>
+  </body>
 </html>
