--- a/Contact.html
+++ b/Contact.html
@@ -24,7 +24,14 @@
 		</ul>
 	</nav>
 
-<img src="images/dining.jpg">
+   <section class="our-story-images">
+      <div class="images">
+        <img src="images/dining.jpg">
+      </div>
+         <div class="images">
+        <img src="images/map.png">
+      </div>
+    </section>
 <div class="container">
   <form action="/action_page.php">
     <label for="fname">First Name</label>
@@ -42,6 +49,25 @@
 
     <label for="subject">Subject</label>
     <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-  
+  </form>
+  <br>
+  <a href="submit_two.html"><button type="submit" form="nameform" value="Submit">Submit</button></a>
+  <br>
+  <section class="footer-nav">
+ <ul class="footer-nav">
+   <li><a href="index.html">Home</a></li>
+   <li><a href="ourStory.html">Our Story</a></li>
+   <li><a href="theBrew.html">The Brew</a></li>
+   <li><a href="Athletes.html">Athletes</a></li>
+   <li><a class="active" href="Contact.html">Contact</a></li>
+ </ul>
+ <div class="social">
+   <i class="fab fa-instagram"></i>
+   <i class="fab fa-facebook-f"></i>
+   <i class="fab fa-twitter"></i>
+   <i class="fab fa-pinterest"></i>
+ </div>
+</section>
+
 </body>
 </html>
