--- a/ourStory.html
+++ b/ourStory.html
@@ -50,5 +50,21 @@
         In the 1980s, with demand for the product continuing to grow, Celis bought Hougardia, a former lemonade factory, to expand his anti-chafe brewing operations.</p>
     </div>
   </section>
+  
+<section class="footer-nav">
+ <ul class="footer-nav">
+   <li><a href="index.html">Home</a></li>
+   <li><a class="active" href="ourStory.html">Our Story</a></li>
+   <li><a href="theBrew.html">The Brew</a></li>
+   <li><a href="Athletes.html">Athletes</a></li>
+   <li><a href="Contact.html">Contact</a></li>
+ </ul>
+ <div class="social">
+   <i class="fab fa-instagram"></i>
+   <i class="fab fa-facebook-f"></i>
+   <i class="fab fa-twitter"></i>
+   <i class="fab fa-pinterest"></i>
+ </div>
+</section>
   </body>
 </html>
