--- a/theBrew.html
+++ b/theBrew.html
@@ -1,37 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Bluesteel Brewery | Home</title>
-	<link href="css/reset.css" rel="stylesheet" type="text/css">
-	<link href="css/main.css" rel="stylesheet" type="text/css">
-	<script src="https://kit.fontawesome.com/a076d05399.js"></script>
-</head>
-<body>
-<nav>
-		<label class="logo">Bluesteel</label>
-		<input type="checkbox" id="check">
-		<label for="check" class="checkbtn">
-			<i class="fas fa-bars"></i>
-		</label>
-		<ul class="mainNav">
-			<li><a href="index.html">Home</a></li>
-			<li><a href="ourStory.html">Our Story</a></li>
-			<li><a class="active" href="theBrew.html">The Brew</a></li>
-			<li><a href="Athletes.html">Athletes</a></li>
-			<li><a href="Contact.html">Contact</a></li>
-		</ul>
-	</nav>
-	<img src="images/running.jpg">
-	<p>Anti-Chafing products help prevent chafing on your rear and any other body parts that rub together or against clothing, so it is often used by runners and other athletes. </p>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bluesteel Brewery | Home</title>
+    <link href="css/reset.css" rel="stylesheet" type="text/css">
+    <link href="css/main.css" rel="stylesheet" type="text/css">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+  </head>
+  <body class="our-story">
+    <nav>
+      <label class="logo">Bluesteel</label>
+      <input type="checkbox" id="check">
+      <label for="check" class="checkbtn">
+        <i class="fas fa-bars"></i>
+      </label>
+      <ul class="mainNav">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="ourStory.html">Our Story</a></li>
+        <li><a class="active" href="theBrew.html">The Brew</a></li>
+        <li><a href="Athletes.html">Athletes</a></li>
+        <li><a href="Contact.html">Contact</a></li>
+      </ul>
+    </nav>
 
-	<img src="images/thinking.jpg">
-	<p>Anti-Chafe Beer allows the body to experience the same sensation it would if you applied anti-chafe cream before any physical activity. Because the same result is achieved by drinking the beer, it’s the first of its kind. </p>
-
-	<img src="images/corander.jpg">
-	<img src="images/wheat-small.jpg">
-	<img src="images/yeast.jpg">
-	<p>First brewed in 1445, Bluesteel’s anti-chafe beer is made with wheat, coriander and yeast with a hint of tea tree oil for it’s anti-chafe qualities.</p>
-</body>
+    <section class="our-story-images">
+      <div class="images">
+        <img src="images/running.jpg">
+         <p> Anti-Chafing products help prevent chafing on your rear and any other body parts that rub together or against clothing, so it is often used by runners and other athletes. </p>
+      </div>
+     
+      <div class="clear" />
+      <div class="images">
+        <img src="images/thinking.jpg">
+        <p> Anti-Chafe Beer allows the body to experience the same sensation it would if you applied anti-chafe cream before any physical activity. Because the same result is achieved by drinking the beer, it’s the first of its kind..</p>
+      </div>
+      <div class="clear" />
+    </section>
+    <hr />
+  <section class="our-story-lower">
+    <div class="images">
+      <img src="images/yeast.jpg">
+      <p> First brewed in 1445, Bluesteel’s anti-chafe beer is made with wheat, coriander and yeast with a hint of tea tree oil for it’s anti-chafe qualities.</p>
+    </div>
+  </section>
+  
+<section class="footer-nav">
+ <ul class="footer-nav">
+   <li><a href="index.html">Home</a></li>
+   <li><a href="ourStory.html">Our Story</a></li>
+   <li><a class="active" href="theBrew.html">The Brew</a></li>
+   <li><a href="Athletes.html">Athletes</a></li>
+   <li><a href="Contact.html">Contact</a></li>
+ </ul>
+ <div class="social">
+   <i class="fab fa-instagram"></i>
+   <i class="fab fa-facebook-f"></i>
+   <i class="fab fa-twitter"></i>
+   <i class="fab fa-pinterest"></i>
+ </div>
+</section>
+  </body>
 </html>
