--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <img src="images/pierrecelis.jpeg">
       <div class="caption">
         <h4>Pierre Celis.</h4>
-        <p>Belgian Brewer</p>
+        <p>Belgian Brewer and visionary.</p>
       </div>
     </div>
   </section>
@@ -92,8 +92,9 @@
     <div class="images">
       <img src="images/beerTable.jpg">
       <div class="caption">
-        <h4>The Beer</h4>
-        <p>Bluesteel 1445. A taste of history.</p>
+        <h4>Unfiltered.</h4>
+        <p>Natural flavour, 
+        better taste.</p>
       </div>
     </div>
   </section>
@@ -102,14 +103,14 @@
       <img src="images/athlete.jpg">
       <div class="caption">
         <h4>The Athletes</h4>
-        <p>Bluesteel 1445. A taste of history.</p>
+        <p>Helping today so they can lead tomorrow.</p>
       </div>
     </div>
     <div class="images">
       <img src="images/sitting.jpg">
       <div class="caption">
-        <h4>The Beer</h4>
-        <p>Bluesteel 1445. A taste of history.</p>
+        <h4>Covid-19</h4>
+        <p>What we all can do.</p>
       </div>
     </div>
   </section>
